<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mail_item_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4">

        <TextView
            android:id="@+id/tv_row_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:text="@string/e_mail_adresse"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_row_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:text="@string/betreff"
            android:textSize="24sp" />

    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_row_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/zeit"
        android:textSize="16sp"
        android:accessibilityTraversalAfter="@id/tv_row_subject"
        android:gravity="right"
        android:layout_weight="1"/>

</LinearLayout>


