<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteMailActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empfaenger"
            android:labelFor="@+id/et_writeMail_receiver"
            />
        <EditText
            android:id="@+id/et_writeMail_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:minWidth="40dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:minHeight="48dp"
            android:textSize="18sp"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/betreff"
            android:labelFor="@+id/et_writeMail_subject"
            />

        <EditText
            android:id="@+id/et_writeMail_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:minWidth="40dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:minHeight="48dp"
            android:textSize="18sp"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:layout_weight="20">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_writeMail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:minHeight="48dp"
                android:minLines="10"
                android:maxLines="10"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:textSize="18sp"
                android:gravity="top"
                android:hint="@string/inhalt" />

        </ScrollView>


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:minWidth="40dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:minHeight="48dp" />
</LinearLayout>